--- a/style.melisha.css
+++ b/style.melisha.css
@@ -49,4 +49,50 @@ align-self: center ;
     flex: 1;
     color: white;
     margin-right: 5%;
+    font-family: ;
     }
+
+    .p{
+        font-size: 12px;
+        margin-top: 5px;
+    }
+
+    @media screen and (max-width: 600px) {
+
+        .header{
+            color: white;
+            text-align: center;
+            position: absolute;
+            font-size: 4px;;
+            z-index: 2;
+        }
+        .p{
+            font-size: 8px;
+        }
+
+        .empty-column {
+            position: relative;
+            z-index: 1;
+            flex: 1;
+            height: 580px;
+            }
+
+        .vid1{
+            width: 150%;
+        }
+        .vid2{
+            width: 150%;
+        }
+        .vid3{
+            width: 150%;
+        }
+        .filled-column {
+            position: relative; 
+            z-index: 2;
+            flex: 2;
+            color: white;
+            margin-right: 5%;
+            margin-left: 20%;
+            font-size:  10px; ;
+            }
+        
